# sympy

./: -la .mailmap  ..a.h  ..b.h  .bashrc  .coveragerc  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .hgignore  .hgtags  .mailmap  .mailmap.bak  .mailmap.save  .mailmapsai kumar  .pre-commit-config.yaml  .profile  .style.yapf  .travis.yml  0001-Added-L-tests-Zero-Equivalence.patch  1.py  2.py  AUTHORS  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Density Stats.ipynb  Dinesh  EXPANSION.md  Fixed_13324.md  Fixes the issue #11813  Fixes the issue #11813.py  GIT_LOG_OUTPUT  Heaviside_function.py  ISSUE_TEMPLATE.md  LICENSE  (+121 more)
.ci/: README.rst  blacklisted.json  circleci_dependencies.sh  circleci_test.sh  code_quality_whitelist.json  durations.json  generate_durations_log.sh  parse_durations_log.py  test_circle_ci.sh
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: bench_symbench.py  symbench.py
combinatorics/: generators.py  polyhedron.py  util.py
core/: power.py  trace.py
dev/: .buildinfo  aboutus.html  genindex.html  gotchas.html  guide.html  index.html  install.html  np-modindex.html  objects.inv  outreach.html  py-modindex.html  python-comparisons.html  search.html  searchindex.js  wiki.html
doc/: Dockerfile.htmldoc  Makefile  README  README.rst  _make.bat  apidoc.conf  aptinstall.sh  convert-svg-to-pdf.sh  create_new_logogdata.sh  fix_broken_links.py  generate_fonts.py  generate_logos.py  generate_reference.py  link_replacements.csv  make.bat  replace_links.py  requirements.txt
examples/: README  all  all.py  basic.py  beginnerNewtonRaphsonMethod.py  differential_equations.py  differentiation.py  expansion.py  fem.py  fem_test.py  functions.py  gibbs_phenomenon.py  iam_sympy_example.py  limits_examples.py  mplot2d.py  mplot3d.py  pidigits.py  plotting.py  plotting_nice_plot.py  precision.py  print_gtk.py  print_pretty.py  print_pygame.py  printpygame.py  qft.py  relativity.py  sample.py  series.py  substitution.py  t.py  tensors.py  trees.py  vandermonde.py
htmlcov/: index.html  jquery.min.js  (+29 more)
(+5475 files in other folders)
