[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
doctests = True
ignore = F403
select = F,E722
exclude = sympy/parsing/latex/_antlr/*,
          sympy/parsing/autolev/_antlr/*,
          sympy/parsing/autolev/test-examples/*,
          sympy/integrals/rubi/*
per-file-ignores = sympy/interactive/session.py:F821

# Global mypy settings:
[mypy]
warn_unused_configs = True
exclude = sympy/parsing/autolev/test-examples

# Per module settings:
[mypy-sympy.integrals.rubi.*]
ignore_errors = True
[mypy-sympy.parsing.latex._antlr.*]
ignore_errors = True
[mypy-sympy.parsing.autolev._antlr.*]
ignore_errors = True
[mypy-sympy.testing.benchmarking.*]
ignore_errors = True
[mypy-sympy.benchmarks.*]
ignore_errors = True
[mypy-sympy.plotting.pygletplot.*]
ignore_errors = True

# Third-party untyped code:
[mypy-antlr4.*]
ignore_missing_imports = True
[mypy-Cython.*]
ignore_missing_imports = True
[mypy-gmpy.*]
ignore_missing_imports = True
[mypy-gmpy2.*]
ignore_missing_imports = True
[mypy-IPython.*]
ignore_missing_imports = True
[mypy-lxml.*]
ignore_missing_imports = True
[mypy-matchpy.*]
ignore_missing_imports = True
[mypy-matplotlib.*]
ignore_missing_imports = True
[mypy-mpmath.*]
ignore_missing_imports = True
[mypy-numpy.*]
ignore_missing_imports = True
[mypy-PIL.*]
ignore_missing_imports = True
[mypy-pycosat.*]
ignore_missing_imports = True
[mypy-pyglet.*]
ignore_missing_imports = True
[mypy-pymc.*]
ignore_missing_imports = True
[mypy-pymc3.*]
ignore_missing_imports = True
[mypy-python-sat.*]
ignore_missing_imports = True
[mypy-pytest.*]
ignore_missing_imports = True
[mypy-_pytest.*]
ignore_missing_imports = True
[mypy-sage.*]
ignore_missing_imports = True
[mypy-scipy.*]
ignore_missing_imports = True
[mypy-symengine.*]
ignore_missing_imports = True
[mypy-aesara.*]
ignore_missing_imports = True
[mypy-xml.*]
ignore_missing_imports = True
[mypy-pydy.*]
ignore_missing_imports = True
[mypy-theano.*]
ignore_missing_imports = True
[mypy-multiset.*]
ignore_missing_imports = True
[mypy-pysat.*]
ignore_missing_imports = True
